--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,55 +20,55 @@ env:
   PDS_REPO_SIGNING_KEY_K256_PRIVATE_KEY_HEX: ${{ secrets.PDS_REPO_SIGNING_KEY_K256_PRIVATE_KEY_HEX }}
 
 jobs:
-  check:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Rust Cache
-      uses: Swatinem/rust-cache@v2
-    - name: Run cargo check
-      run: cargo check
+  # check:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Rust Cache
+  #       uses: Swatinem/rust-cache@v2
+  #     - name: Run cargo check
+  #       run: cargo check
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Rust Cache
-      uses: Swatinem/rust-cache@v2
-    - name: Run cargo build
-      run: cargo build --release
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Rust Cache
+  #       uses: Swatinem/rust-cache@v2
+  #     - name: Run cargo build
+  #       run: cargo build --release
 
-  test:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Rust Cache
-      uses: Swatinem/rust-cache@v2
-    - name: Run cargo test
-      run: cargo test 
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Rust Cache
+  #       uses: Swatinem/rust-cache@v2
+  #     - name: Run cargo test
+  #       run: cargo test
 
   # clippy:
   #   runs-on: ubuntu-latest
   #   needs: test
   #   steps:
-  #   - name: Checkout code
-  #     uses: actions/checkout@v4
-  #   - name: Rust Cache
-  #     uses: Swatinem/rust-cache@v2
-  #   - name: Run Clippy
-  #     run: cargo clippy  -- -D warnings
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
+  #     - name: Rust Cache
+  #       uses: Swatinem/rust-cache@v2
+  #     - name: Run Clippy
+  #       run: cargo clippy  -- -D warnings
 
   formatting:
     runs-on: ubuntu-latest
     needs: test
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Rust Cache
-      uses: Swatinem/rust-cache@v2
-    - name: Run cargo fmt
-      run: cargo fmt -- --check
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2
+      - name: Run cargo fmt
+        run: cargo fmt -- --check
