add events sync logic

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -9,6 +9,18 @@ services:
     tmpfs:
       - /var/lib/postgresql/data
 
+  postgresql-2:
+    image: postgres:17-bookworm
+    ports:
+      - 5435:5432
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: trust
+    profiles:
+      - multiple-networks
+    command: postgres -c log_statement=all
+    tmpfs:
+      - /var/lib/postgresql/data
+
   minio:
     image: minio/minio
     ports:
@@ -25,20 +37,128 @@ services:
     ports:
       - 40401:40401
       - 40402:40402
-    env_file:
-      - ../docker/.env
-    command: run -s --no-upnp --allow-private-addresses --synchrony-constraint-threshold=0.0 --validator-private-key ${VALIDATOR_PRIVATE_KEY}
+    command:
+      - run
+      - -s
+      - --no-upnp
+      - --allow-private-addresses
+      - --synchrony-constraint-threshold=0.0
+      - --validator-private-key=6a786ec387aff99fcce1bd6faa35916bfad3686d5c98e90a89f77670f535607c
 
-  sync:
+  did-plc:
+    image: ihorrr/did-method-plc
+    depends_on:
+      - postgresql
+    environment:
+      DB_CREDS_JSON: '{ "password": "", "host": "postgresql" }'
+      DB_SCHEMA: plc
+      ENABLE_MIGRATIONS: true
+      DB_MIGRATE_CREDS_JSON: '{ "password": "", "host": "postgresql" }'
+      PORT: 2582
+
+  state-sync-init:
     build:
-      context: ../firefly
-      dockerfile: ../docker/sync.dockerfile
+      context: ..
+      dockerfile: docker/state-sync.dockerfile
       args:
         POSTGRESQL_VERSION: 17
     depends_on:
       firefly:
         condition: service_healthy
-    env_file:
-      - ../docker/.env
-    entrypoint: /bin/bash
-    command: -c "/app/firefly --wallet-key=${WALLET_KEY} --deploy-service-url=http://firefly:40401 --propose-service-url=http://firefly:40402 --service-id=docker-pds init-contract; while true; do /app/firefly --wallet-key=${WALLET_KEY} --deploy-service-url=http://firefly:40401 --propose-service-url=http://firefly:40402 --service-id=docker-pds upload --db-url=postgresql://postgres@postgresql:5432; echo SYNCED; sleep 300; done"
+    restart: no
+    profiles:
+      - state-sync
+    command:
+      - --wallet-key=a8cf01d889cc6ef3119ecbd57301036a52c41ae6e44964e098cb2aefa4598954
+      - --deploy-service-url=http://firefly:40401
+      - --propose-service-url=http://firefly:40402
+      - --service-id=docker-pds
+      - init
+
+  state-sync:
+    build:
+      context: ..
+      dockerfile: docker/state-sync.dockerfile
+      args:
+        POSTGRESQL_VERSION: 17
+    depends_on:
+      firefly:
+        condition: service_healthy
+      state-sync-init:
+        condition: service_completed_successfully
+    profiles:
+      - state-sync
+    command:
+      - --wallet-key=a8cf01d889cc6ef3119ecbd57301036a52c41ae6e44964e098cb2aefa4598954
+      - --deploy-service-url=http://firefly:40401
+      - --propose-service-url=http://firefly:40402
+      - --service-id=docker-pds
+      - upload
+      - --db-url=postgresql://postgres@postgresql:5432
+      - --interval=300
+
+  events-init:
+    build:
+      context: ..
+      dockerfile: docker/events-sync.dockerfile
+    depends_on:
+      firefly:
+        condition: service_healthy
+    restart: no
+    profiles:
+      - multiple-networks
+    command:
+      - --wallet-key=a8cf01d889cc6ef3119ecbd57301036a52c41ae6e44964e098cb2aefa4598954
+      - --deploy-service-url=http://firefly:40401
+      - --propose-service-url=http://firefly:40402
+      - --service-id=docker-pds
+      - init
+
+  events-listen:
+    build:
+      context: ..
+      dockerfile: docker/events-sync.dockerfile
+    depends_on:
+      firefly:
+        condition: service_healthy
+      events-init:
+        condition: service_completed_successfully
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    ports:
+      - 2683:2683
+    profiles:
+      - multiple-networks
+    command:
+      - --wallet-key=a8cf01d889cc6ef3119ecbd57301036a52c41ae6e44964e098cb2aefa4598954
+      - --deploy-service-url=http://firefly:40401
+      - --propose-service-url=http://firefly:40402
+      - --service-id=docker-pds
+      - listen
+      - --communication-service-api-addr=0.0.0.0:8082
+      - --sync-api-addr=0.0.0.0:2683
+      - --external-hostname=events-listen
+      - --extra-sources=ws://host.docker.internal:2999/xrpc/com.atproto.sync.subscribeRepos
+
+  events-push:
+    build:
+      context: ..
+      dockerfile: docker/events-sync.dockerfile
+    depends_on:
+      firefly:
+        condition: service_healthy
+      events-init:
+        condition: service_completed_successfully
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    profiles:
+      - multiple-networks
+    command:
+      - --wallet-key=a8cf01d889cc6ef3119ecbd57301036a52c41ae6e44964e098cb2aefa4598954
+      - --deploy-service-url=http://firefly:40401
+      - --propose-service-url=http://firefly:40402
+      - --service-id=docker-pds
+      - push
+      - --events-source-url=ws://host.docker.internal:2583/xrpc/com.atproto.sync.subscribeRepos
+      - --time-threshold=3
+      - --size-threshold=16
