--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -35,15 +35,42 @@ services:
       context: .
       dockerfile: firefly.dockerfile
     ports:
+      - 40400:40400
       - 40401:40401
       - 40402:40402
-    command:
-      - run
-      - -s
-      - --no-upnp
-      - --allow-private-addresses
-      - --synchrony-constraint-threshold=0.0
-      - --validator-private-key=6a786ec387aff99fcce1bd6faa35916bfad3686d5c98e90a89f77670f535607c
+      - 40403:40403
+      - 40404:40404
+      - 40405:40405
+    volumes:
+    - ./ssl:/data/ssl
+    command: run -s
+      --validator-private-key=6a786ec387aff99fcce1bd6faa35916bfad3686d5c98e90a89f77670f535607c 
+      --host firefly 
+      --no-upnp --allow-private-addresses --synchrony-constraint-threshold=0.0 
+      --approve-duration 10seconds --approve-interval 10seconds 
+      --protocol-port 40400 --discovery-port 40404
+      --tls-certificate-path /data/ssl/node.certificate.pem --tls-key-path /data/ssl/node.key.pem #for constant bootstrap address
+
+
+  firefly-read:
+    build:
+      context: .
+      dockerfile: firefly.dockerfile
+    ports:
+      - 40411:40401
+      - 40413:40403
+      - 40415:40405
+      - 40410:40410
+      - 40414:40414
+
+    command: run -b "rnode://ebffd419dea60220734ccea8875e86d87bac10a7@firefly?protocol=40400&discovery=40404"
+      --host firefly-read
+      --no-upnp --allow-private-addresses
+      --protocol-port 40410 --discovery-port 40414
+      --approve-duration 10seconds --approve-interval 10seconds
+      --fork-choice-check-if-stale-interval 30seconds --fork-choice-stale-threshold 30seconds
+# add to .env address from firefly logs, for example:
+# VALIDATOR_FIREFLY_ADDRESS='"rnode://583695e432861b045d15d5ca3176efbcd3193207@firefly?protocol=40400&discovery=40404"' # not working if hardcoded in the docker-compose
 
   did-plc:
     image: ihorrr/did-method-plc
