--- a/rsky-pds/Cargo.toml
+++ b/rsky-pds/Cargo.toml
@@ -70,6 +70,7 @@ once_cell = "1.19.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 diesel_migrations = "*"
+firefly-api = { path = "../firefly-api" }
 
 [dependencies.rocket_sync_db_pools]
 version = "=0.1.0"
