--- a/rsky-pds/Cargo.toml
+++ b/rsky-pds/Cargo.toml
@@ -71,6 +71,7 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 diesel_migrations = "*"
 firefly-api = { path = "../firefly-api" }
+uuid        = { version = "1.13", features = ["serde", "v4"] }
 
 [dependencies.rocket_sync_db_pools]
 version = "=0.1.0"
