--- a/rsky-lexicon/Cargo.toml
+++ b/rsky-lexicon/Cargo.toml
@@ -1,29 +1,29 @@
 [package]
-name = "rsky-lexicon"
-version = "0.2.7"
-edition = "2021"
-publish = true
-description = "Bluesky API library"
-authors = ["Rudy Fraser <him@rudyfraser.com>"]
-homepage = "https://blackskyweb.xyz"
-repository = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-lexicon"
-license = "Apache-2.0"
-keywords = ["bluesky", "atproto"]
-readme = "README.md"
+authors       = ["Rudy Fraser <him@rudyfraser.com>"]
+description   = "Bluesky API library"
 documentation = "https://docs.rs/rsky-lexicon"
+edition       = "2021"
+homepage      = "https://blackskyweb.xyz"
+keywords      = ["atproto", "bluesky"]
+license       = "Apache-2.0"
+name          = "rsky-lexicon"
+publish       = true
+readme        = "README.md"
+repository    = "https://github.com/blacksky-algorithms/rsky/tree/main/rsky-lexicon"
+version       = "0.2.7"
 
 [dependencies]
-chrono = { version = "0.4.24", features = ["serde"] }
+anyhow         = "1.0.79"                                     # @TODO: Remove anyhow in lib
+chrono         = { version = "0.4.24", features = ["serde"] }
 derive_builder = "0.12.0"
-miette = "5.8.0"
-parking_lot = "0.12.1"
-serde = {workspace = true}
-serde_json = {workspace = true}
-serde_cbor = {workspace = true}
-serde_derive = "^1.0"
-serde_bytes = "0.11.9"
-thiserror = "1.0.40"
-secp256k1 = {workspace = true}
-libipld = {workspace = true}
-lexicon_cid = {workspace = true}
-anyhow = "1.0.79" # @TODO: Remove anyhow in lib
+lexicon_cid    = { workspace = true }
+libipld        = { workspace = true }
+miette         = "5.8.0"
+parking_lot    = "0.12.1"
+secp256k1      = { workspace = true }
+serde          = { workspace = true }
+serde_bytes    = "0.11.9"
+serde_cbor     = { workspace = true }
+serde_derive   = "^1.0"
+serde_json     = { workspace = true }
+thiserror      = "1.0.40"
