--- a/firefly-api/Cargo.toml
+++ b/firefly-api/Cargo.toml
@@ -8,13 +8,16 @@ version = "0.1.0"
 anyhow     = { version = "1.0" }
 base64     = { version = "0.22" }
 blake2     = { version = "0.10" }
+hex        = { version = "*" }
 prost      = { version = "0.13" }
+rand       = { version = "*" }
 reqwest    = "0.12.15"
 secp256k1  = { workspace = true }                                           # must be the same version as in rsky-pds
 serde      = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 tokio      = { version = "1.43", features = ["macros", "rt-multi-thread"] }
 tonic      = { version = "0.12" }
+tracing    = { version = "*" }
 uuid       = { version = "1.13", features = ["serde", "v4"] }
 
 [build-dependencies]
