fix Dockerfiles to use workspace Cargo.toml

--- a/firefly-api/Cargo.toml
+++ b/firefly-api/Cargo.toml
@@ -12,7 +12,7 @@ hex        = { version = "*" }
 prost      = { version = "0.13" }
 rand       = { version = "*" }
 reqwest    = { version = "*", features = ["json"] }
-secp256k1  = { version = "0.28.2", features = ["global-context", "hashes", "rand", "rand-std", "serde"] } # must be the same version as in rsky-pds
+secp256k1  = { workspace = true }                                           # must be the same version as in rsky-pds
 serde      = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 tokio      = { version = "1.43", features = ["macros", "rt-multi-thread"] }
