--- a/firefly-events-sync/Cargo.toml
+++ b/firefly-events-sync/Cargo.toml
@@ -14,7 +14,7 @@ firefly-api       = { path = "../firefly-api" }
 futures           = { version = "0.3" }
 hex               = { version = "0.4" }
 scopeguard        = { version = "1.2" }
-secp256k1         = { version = "0.28.2", features = ["global-context", "hashes", "rand", "rand-std", "serde"] } # must be the same version as in firefly-api
+secp256k1         = { workspace = true }                                                             # must be the same version as in firefly-api
 serde             = { version = "1.0", features = ["derive"] }
 serde_json        = { version = "1.0" }
 tokio             = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "sync"] }
