use workspace Cargo.toml to provide local crate

--- a/firefly-events-sync/Cargo.toml
+++ b/firefly-events-sync/Cargo.toml
@@ -10,7 +10,7 @@ async-stream      = { version = "0.3" }
 base64            = { version = "0.22" }
 bitcode           = { version = "0.6", features = ["serde"] }
 clap              = { version = "4.5", features = ["derive"] }
-firefly-api       = { path = "../firefly-api" }
+firefly-api       = { workspace = true }
 futures           = { version = "0.3" }
 hex               = { version = "0.4" }
 scopeguard        = { version = "1.2" }
