--- a/rsky-pds/Dockerfile
+++ b/rsky-pds/Dockerfile
@@ -2,8 +2,6 @@
 # https://hub.docker.com/_/rust
 FROM rust:1.86-slim-bookworm AS builder
 
-RUN apt update && apt install -y protobuf-compiler
-
 # Install required dependencies, including OpenSSL development libraries
 RUN apt update && apt install -y protobuf-compiler libssl-dev pkg-config libpq-dev
 
@@ -15,7 +13,7 @@ RUN cargo build --package rsky-pds
 
 FROM debian:bookworm-slim AS runtime
 
-RUN apt update && apt install -y libpq-dev ca-certificates libssl-dev libpq-dev && update-ca-certificates
+RUN apt update && apt install -y libpq-dev ca-certificates libssl-dev && update-ca-certificates
 
 WORKDIR /usr/src/rsky
 COPY --from=builder /usr/src/rsky/target/debug/rsky-pds rsky-pds
