--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -31,12 +31,12 @@ services:
     command: server /data --console-address ":9001"
 
   firefly:
-    image: ghcr.io/f1r3fly-io/rnode:latest
+    build:
+      context: .
+      dockerfile: firefly.dockerfile
     ports:
       - 40401:40401
       - 40402:40402
-    volumes:
-      - ./genesis:/var/lib/rnode/genesis
     command:
       - run
       - -s
