--- a/firefly-state-sync/Cargo.toml
+++ b/firefly-state-sync/Cargo.toml
@@ -8,9 +8,9 @@ version = "0.1.0"
 anyhow      = { version = "1.0" }
 base64      = { version = "0.22" }
 clap        = { version = "4.5", features = ["derive"] }
-firefly-api = { path = "../firefly-api" }
+firefly-api = { workspace = true }
 hex         = { version = "0.4" }
-secp256k1   = { version = "0.30" }
+secp256k1   = { workspace = true }                                                     # must be the same version as in firefly-api
 serde       = { version = "1.0", features = ["derive"] }
 serde_json  = { version = "1.0" }
 tokio       = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
