--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,4 @@ rsky-syntax = {path = "rsky-syntax", version = "0.1.0"}
 rsky-common = {path = "rsky-common", version = "0.1.1"}
 rsky-repo = {path = "rsky-repo", version = "0.0.1"}
 rsky-firehose = {path = "rsky-firehose", version = "0.2.0"}
+firefly-api = { path = "firefly-api", version = "0.1.0" }
