--- a/rsky-pds/Cargo.toml
+++ b/rsky-pds/Cargo.toml
@@ -22,7 +22,7 @@ aws-sdk-s3          = "1.29.0"
 base64              = "0.22.0"
 base64-url          = "2.0.2"
 base64ct            = "1.6.0"
-chrono              = "0.4.26"
+chrono = { version = "0.4.24", features = ["serde"] }
 data-encoding       = "2.5.0"
 diesel              = { version = "=2.1.5", features = ["chrono", "postgres"] }
 diesel_migrations   = "*"
