--- a/firefly-api/Cargo.toml
+++ b/firefly-api/Cargo.toml
@@ -8,6 +8,7 @@ version = "0.1.0"
 anyhow     = { version = "1.0" }
 base64     = { version = "0.22" }
 blake2     = { version = "0.10" }
+bs58       = { version = "0.4" }
 chrono     = { version = "0.4.40" }
 csv        = { version = "1.3.1" }
 hex        = { version = "*" }
