--- a/rsky-pds/Cargo.toml
+++ b/rsky-pds/Cargo.toml
@@ -22,7 +22,7 @@ rsky-syntax = { workspace = true }
 rsky-repo = { workspace = true }
 diesel = { version = "=2.1.5", features = ["chrono", "postgres"] }
 chrono = "0.4.26"
-serde = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
 serde_repr = "0.1"
 serde_derive = {workspace = true}
 rand = {workspace = true}
@@ -71,6 +71,7 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 diesel_migrations = "*"
 firefly-api = { workspace = true }
+uuid = "*"
 
 [dependencies.rocket_sync_db_pools]
 version = "=0.1.0"
