--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["rsky-common", "rsky-crypto", "rsky-feedgen", "rsky-firehose", "rsky-identity", "rsky-labeler", "rsky-lexicon", "rsky-pds", "rsky-syntax", "rsky-jetstream-subscriber", "rsky-repo", "cypher/backend", "cypher/frontend", "rsky-satnav", "firefly-api", "firefly-events-sync", "firefly-state-sync"]
+members  = ["cypher/backend", "cypher/frontend", "firefly-api", "firefly-events-sync", "firefly-state-sync", "rsky-common", "rsky-crypto", "rsky-feedgen", "rsky-firehose", "rsky-identity", "rsky-jetstream-subscriber", "rsky-labeler", "rsky-lexicon", "rsky-pds", "rsky-pds", "rsky-repo", "rsky-satnav", "rsky-syntax"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -25,3 +25,4 @@ rsky-common = {path = "rsky-common", version = "0.1.1"}
 rsky-repo = {path = "rsky-repo", version = "0.0.1"}
 rsky-firehose = {path = "rsky-firehose", version = "0.2.0"}
 firefly-api = { path = "firefly-api", version = "0.1.0" }
+rsky-pds = { path = "rsky-pds", version = "0.1.0" }
