--- a/firefly-api/Cargo.toml
+++ b/firefly-api/Cargo.toml
@@ -9,7 +9,7 @@ anyhow     = { version = "1.0" }
 base64     = { version = "0.22" }
 blake2     = { version = "0.10" }
 bs58       = { version = "0.4" }
-chrono     = { version = "0.4.40" }
+chrono     = { version = "0.4.40", features = ["serde"] }
 csv        = { version = "1.3.1" }
 hex        = { version = "*" }
 prost      = { version = "0.13" }
